@@ -14,7 +14,7 @@ public class AppConfig {
 
     @Bean(destroyMethod = "shutdownNow")
     public ExecutorService ispExecutor() {
-        return Executors.newFixedThreadPool(8);
+        return Executors.newVirtualThreadPerTaskExecutor();
     }
 
     @Bean
@@ -23,7 +23,7 @@ public class AppConfig {
             @Override
             public void addCorsMappings(CorsRegistry registry) {
                 registry.addMapping("/api/**")
-                        .allowedOrigins("http://localhost:3000")
+                        .allowedOrigins("http://localhost:3000", "http://localhost:5173")
                         .allowedMethods("GET", "POST", "OPTIONS");
             }
         };
